custom/kube-scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    app.kubernetes.io/name: kube-scheduler
spec:
  type: ClusterIP
  ports:
    - name: https-metrics
      port: 10259
      targetPort: 10259
      protocol: TCP
  selector:
    component: kube-scheduler
